Draft new resource config structure
